# data-science-docker-gunicorn-fastapi

./: Makefile  README.md  docker-compose.override.yml.old  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yml
backend/: .env  .env_development  backend.dockerfile
backend/app/: pyproject.toml
backend/app/app/: main.py
backend/app/app/api/api_v1/endpoints/: items.py
backend/app/app/core/: config.py
backend/app/app/notebooks/: Python3_8.ipynb
