[tool.poetry]
name = "app"
version = "0.1.0"
description = "Python with Uvicorn and Gunicorn"
authors = ["Sebastien Mascha <sebastien.mascha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
fastapi = "^0.63.0"
requests = "^2.25.1"
gunicorn = "^20.1.0"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
